<resources>
    <string name="app_name">MusicAPP</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="LogIn">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="ayuda">Ayuda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="minimo_8_caracteres">Minimo 8 caracteres</string>
    <string name="acerca_de_musicapp">ACERCA DE MUSICAPP</string>
</resources>